add docker repo

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,7 @@ services:
       - "80:80"
   node-app:
     build:
+      image: kathykk/node-app
       context: .
       args:
           NODE_ENV: production
